fix styles errors

--- a/AssetManagementSystem.PL/Views/Shared/_Dashboard_Tabler.cshtml
+++ b/AssetManagementSystem.PL/Views/Shared/_Dashboard_Tabler.cshtml
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Cairo:wght@300;400;500;600;700&display=swap">
 
     <!-- Custom Tabler overrides for RTL and Arabic -->
-   <link href="~/css/tabler_custom.css" rel="stylesheet" />
+   <link href="~/css/tabler_custom.css" rel="stylesheet" asp-append-version="true" />
 
     <!-- Page specific styles -->
     @await RenderSectionAsync("Styles", required: false)
